# chython

./: .gitignore  .gitmodules  .readthedocs.yaml  README.rst  build.py  build_inchi.py  environment.yml  pyproject.toml  readthedocs.yml  setup.py
.github/workflows/: python-package.yml  tests.yml
INCHI/: LICENCE  libinchi.dynlib  libinchi_arm64.dylib  readme.txt
chython/: __init__.py  _cache.py  _functions.py  _java.py  exceptions.py
chython/algorithms/: __init__.py  _isomorphism.pyx  _rings.pyx  conformers.py  depict.py  huckel.py  isomorphism.py  mcs.py  morgan.py  rings.py  smarts.py  smiles.py  sssr.py  stereo.py  x3dom.py
chython/algorithms/aromatics/: __init__.py  _rules.py  kekule.py  thiele.py
chython/algorithms/aromatics/test/: __init__.py  test_kekule.py  test_thiele.py
chython/algorithms/calculate2d/: Calculate2d.py  KKLayout.py  MathHelper.py  Properties.py  __init__.py  _templates.py  _vector.py  clean2d.js  clean2d.py  kamada_kawai.py  molecule.py  polygon.py  reaction.py
chython/algorithms/components/: __init__.py  cgr.py  graph.py  reaction.py  structure.py
chython/algorithms/fingerprints/: __init__.py  circus.py  fragmentor.py  linear.py  morgan.py  pharmacophore.py
chython/algorithms/fingerprints/feature_queries/: __init__.py  acceptor.py
chython/algorithms/fingerprints/pharmacophore/: __init__.py  _acceptor.py  _acidic.py  _basic.py  _donor.py  aromatic.py  halogen.py
chython/algorithms/groups/: __init__.py  _functional.py  _oxidations.py  _protective.py  _reactions.py  _reductions.py  _transformations.py
chython/algorithms/mapping/: __init__.py  _groups.py  _mapping.py  _reactions.py  attention.py  fixmapper.py  groups.py  reconstruct.py
chython/algorithms/standardize/: __init__.py  _charged.py  _groups.py  _isomers.py  _mapping.py  _metal_organics.py  _reagents.py  _salts.py  _tautomers.py  molecule.py  reaction.py  resonance.py  salts.py  saturation.py
chython/algorithms/stereo/: __init__.py  graph.py  molecule.py
chython/algorithms/tautomers/: __init__.py  _acid.py  _base.py  _keto_enol.py  acid_base.py  heteroarenes.py  keto_enol.py
chython/algorithms/test/: __init__.py  test_isomorphism.py  test_multicomponent_mapping.py  test_reaction_depict.py  test_smarts_aromaticity.py  test_smarts_export.py  test_smiles.py
chython/containers/: __init__.py  _pack.pyx  _pack_v2.pyx  _pack_v4.pyx  _unpack.pyx  _unpack_v0v2.pyx  _unpack_v3.pyx  bonds.py  cgr.py  cgr_query.py  chimera.py  graph.py  markush.py  markushi.py  molecule.py  query.py  rdkit.py  reaction.py
chython/containers/test/: test_cgr_query_remap.py  test_molecule.py  test_pack.py  test_rdkit.py  test_reaction.py
chython/files/: INCHIrw.py  MRVrw.py  PDBrw.py  RDFrw.py  SDFrw.py  SMILESrw.py  XYZrw.py  __init__.py  _convert.py  _mapping.py  _xyz.pyx  inchi.py  opsin.py  possible_bonds.pyx  xyz.py
chython/files/_mdl/: __init__.py  _write.py  emol.py  erxn.py  ewrite.py  mol.py  parser.py  read.py  rxn.py  stereo.py  write.py
chython/files/daylight/: CGRrw.py  SMARTSrw.py  SMILESrw.py  SMIRKSrw.py  __init__.py  _parser.py  cgr.py  parser.py  smarts.py  smiles.py  tokenize.py
chython/files/libinchi/: __init__.py  wrapper.py
chython/files/mdl/: __init__.py  emol.py  erxn.py  mol.py  read.py  rxn.py  stereo.py  write.py
chython/files/test/: test_inchi.py  test_mrv.py  test_sdf_rdf.py  test_smilesrw.py  test_xyz.py
chython/periodictable/: __init__.py  groupI.py  groupII.py  groupIII.py  groupIV.py  groupIX.py  groupV.py  groupVI.py  groupVII.py  groupVIII.py  groupX.py  groupXI.py  groupXII.py  groupXIII.py  groupXIV.py  groupXV.py  groupXVI.py  groupXVII.py  groupXVIII.py  groups.py  markush.py  periods.py  rgroup.py
chython/periodictable/base/: __init__.py  dynamic.py  element.py  groups.py  periods.py  query.py  vector.py
chython/periodictable/element/: __init__.py  core.py  dynamic.py  element.py  markushi_substituent.py  query.py
chython/periodictable/test/: test_element.py
chython/reactor/: __init__.py  base.py  deprotection.py  groups.py  reactions.py  reactor.py  scaffold.py  transformer.py
chython/reactor/reactions/: __init__.py  _aliphatic_C_N.py  _aliphatic_C_O.py  _amidation.py  _amine_isocyanate.py  _aromatic_C_O.py  _buchwald_hartwig.py  _decarboxylative_xec.py  _esterification.py  _macmillan.py  _mitsunobu.py  _negishi.py  _reductive_amination.py  _sonogashira.py  _sulfonamidation.py  _suzuki_miyaura.py  _xec_sp2_sp3.py  ufe.py
chython/reactor/retro/: __init__.py  _amidation.py  _aryl_amination.py  _mitsunobu.py  _sonogashira.py  _suzuki_miyaura.py
chython/reactor/test/: __init__.py  test_deprotection.py  test_reactor.py  test_reactor_aromaticity.py  test_transformer.py
chython/test/: test_cache.py
chython/utils/: __init__.py  free_wilson.py  functional_groups.py  grid.py  rdkit.py  retro.py  svg.py
chython/utils/test/: test_rdkit.py
clean2d/: README  package-lock.json  package.json  webpack.config.js
clean2d/src/: index.js
doc/: conf.py  config.rst  containers.rst  depiction.rst  files.rst  index.rst  io.rst  molecule.rst  periodictable.rst  reactions.rst  reactor.rst  requirements.txt  search.rst  standardize.rst  substructure.rst  utils.rst
doc/tutorial/: example.mrv  example.rdf  notebook.ipynb
mapping/: mapping.ipynb
pach/: benchmark.py  usage.py
test/: arenes.sdf  cycle.sdf  heterocycles_charges.smi  inchi.txt  isomorphism.sdf  morgan_ruiner.sdf  reaction_centerslist.rdf  standardize.rdf
tests/algorithms/aromatics/: test_kekule.py  test_thiele.py
tests/algorithms/calculate2d/: test_clean2d.py
tests/algorithms/fingerprints/: test_linear.py  test_morgan.py
tests/algorithms/mapping/: test_mapping.py
tests/algorithms/standardize/: test_groups.py
tests/algorithms/tautomers/: __init__.py  test_tautomers.py
tests/containers/: test_query.py
tests/data/: MR.rdf  ch.xyz  depict.sdf  hbonds.sdf  implicit.mrv  implicit.sdf  ions.rdf  mcs.sdf  peptide.sdf  standardize.sdf  stereo.sdf
tests/files/daylight/: test_daylight_smarts.py  test_daylight_smiles.py  test_tokenize.py
tests/reactor/: test_scaffold.py
(+21 files in other folders)
